fix: arruma css para não deixar dar overflow nos textos

--- a/public/css/lp.css
+++ b/public/css/lp.css
@@ -206,6 +206,9 @@ a{
     display: flex;
     flex-direction: column;
     gap: 10px;
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+    word-break: break-word;
 }
 
 
@@ -282,7 +285,9 @@ a{
 
 .slider-item-landing p{
     padding: 0 10px 10px 0;
+    overflow-wrap: break-word;
     word-wrap: break-word;
+    word-break: break-word;
 }
 
 .slider-item-landing h4 {
